tests/lowering/invalid-unnamed-path-hanger.stderr
error[E025]: `use` of unnamed `super`
 --> ${DIRECTORY}/lowering/invalid-unnamed-path-hanger.lushui:3:5
  |
3 | use super
  |     ^^^^^ 
  |
 help: bind the path to a name with `as`

error[E025]: `use` of unnamed `crate`
 --> ${DIRECTORY}/lowering/invalid-unnamed-path-hanger.lushui:4:5
  |
4 | use crate
  |     ^^^^^ 
  |
 help: bind the path to a name with `as`

error[E025]: `use` of unnamed `self`
 --> ${DIRECTORY}/lowering/invalid-unnamed-path-hanger.lushui:6:5
  |
6 | use self
  |     ^^^^ 
  |
 help: bind the path to a name with `as`

error[E025]: `use` of unnamed `self`
 --> ${DIRECTORY}/lowering/invalid-unnamed-path-hanger.lushui:8:18
  |
8 | use crate.(space self space)
  |                  ^^^^ 
  |
 help: bind the path to a name with `as`

error[E026]: path hanger `super` not allowed in this position
  --> ${DIRECTORY}/lowering/invalid-unnamed-path-hanger.lushui:10:29
   |
10 | use crate.(self.(self.thing super))
   |                             ^^^^^ 
   |
  help: consider moving this path to its own separate use declaration

error: aborting due to 5 previous errors

